assets/styles/layout.less
@import "node_modules/skeleton-less/less/skeleton";
@import "media_queries";

body > header,
article,
main,
footer {
  .container();
}

body > main {
  overflow: auto;
  display: flex;
  flex-direction: row-reverse;

  @media (@small) {
    flex-direction: column-reverse;
  }
}

body > header {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: flex-start;
  padding-top: 0.5em;
}

body > header > .title {
  align-self: center;
}

body > header > nav {
  align-self: flex-end;
}

body > header > nav > * {
  display: inline;
}

@media (@medium) {
  body > header > nav {
    display: none;
  }
}

body > main .content figure.illustration img {
  min-width: 150px;
}

body > main > #content {
  width: 70%;
}

body > main aside#sidebar {
  width: 30%;
  padding-left: 5%;
}

body > main aside#sidebar img {
  max-width: 100%;
}

body > main #products {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

body > main #products div.product {
  flex-shrink: 2;
  width: 50%;
}

body > main #products div.product img {
  width: 100%;
  padding: 2.5%;
}

article {
  margin: 0;
  margin-bottom: 2em;
  overflow: auto;
}

body > main aside#sidebar.products {
  text-align: center;
}

@media (@small) {
  body > main aside#sidebar {
    width: 100%;
    padding-left: 0;
  }
}

article header {
  margin: 0;
}

article .content header {
  h1,
  h2,
  h3,
  h4,
  h5 {
    margin-bottom: 0;
  }
}

.stat-block {
  position: relative;
}

.stat-block img.background {
  width: 100%;
  max-width: 500px;
  z-index: -1;
  position: relative;
}

.stat-block vellum-monster {
  position: absolute;
  top: 0;
  right: 0;
}

.stat-block-left {
  position: relative;
}

.stat-block-left img.background {
  width: 100%;
  max-width: 500px;
  z-index: -1;
  position: relative;
}

.stat-block-left vellum-monster {
  position: absolute;
  top: 0;
  left: 0;
}

@media (@medium) {
  .stat-block {
    position: static;
  }

  .stat-block img.background {
    display: none;
  }

  .stat-block vellum-monster {
    position: static;
  }

  .stat-block-left {
    position: static;
  }

  .stat-block-left img.background {
    display: none;
  }

  .stat-block-left vellum-monster {
    position: static;
  }
}

.content table td {
  padding-right: 1em;
}

.content table {
  border-collapse: collapse;
}

.content table td.number,
.content table th.number {
  padding-left: 1em;
  padding-right: 1em;
  text-align: center;
}

